--- a/OpenPeerSampleApp/res/values/strings.xml
+++ b/OpenPeerSampleApp/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="label_participants">Participants</string>
     <string name="msg_no_contacts_found">No contacts found</string>
     <string name="label_new_conversation">Create new thread</string>
+    <string name="alert_signout">Signout will delete all your cached messages. Do you really want to signout?</string>
 </resources>
