--- a/OpenPeerSampleApp/res/values/strings.xml
+++ b/OpenPeerSampleApp/res/values/strings.xml
@@ -79,4 +79,8 @@
     <string name="msg_no_contacts_found">No contacts found</string>
     <string name="label_new_conversation">Create new thread</string>
     <string name="alert_signout">Signout will delete all your cached messages. Do you really want to signout?</string>
+
+    <string name="label_take_photo">Take Photo</string>
+    <string name="label_choose_existing">Choose existing</string>
+
 </resources>
